Linkerd/nginx-httpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: app
  annotations:
    linkerd.io/inject: enabled
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: app
  annotations:
    linkerd.io/inject: enabled
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: httpd-service
  namespace: app
  annotations:
    linkerd.io/inject: enabled  
spec:
  selector:
    app: httpd
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
